added pic, greeting, banner

--- a/main/main.html
+++ b/main/main.html
@@ -13,7 +13,7 @@
 
 </head>
 <body background="../pics/draining.jpg">
-        <h1 id="h1">Evergreen Drain Services</h1>
+    <h1 id="h1">Evergreen Drain Services</h1>
     <nav class="navbar">
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
@@ -22,7 +22,15 @@
             <li><a href="services.html">Services</a></li>
         </ul>
     </nav>
-    <div>
+    <div id="plumberOne" class="img" width="200px">
+        <img src="../pics/plumberOne.jpg" alt="">
     </div>
+    <span id="welcome">
+        <p><h2>Hello! Welcome to Evergreen Drain Services. If you are here reading this, I think it's safe to assume you're having some problems. That's where I come in!</h2></p>
+    </span>
+    <div id="banner">
+        
+    </div>
+    <!-- <script type="text/javascript" src="./main.js"></script> -->
 </body>
 </html>
